AKS-ACNS-Cilium-Terraform/kubernetes-manifests/08-dns-metrics-trigger-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dns-metrics-trigger
  namespace: traffic-demo
spec:
  endpointSelector:
    matchLabels:
      app: dns-traffic-generator
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchName: kubernetes.default.svc.cluster.local
        - matchName: bing.com
        - matchName: github.com
        - matchName: cloudflare.com
        - matchPattern: "*.invalid"
  - toFQDNs:
    - matchName: bing.com
    - matchName: github.com
    - matchName: cloudflare.com
