AKS-ACNS-Cilium-Terraform/kubernetes-manifests/12-l7-client-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: http-client-egress-l7
  namespace: traffic-demo
spec:
  description: "Allow http-client egress to http-server on GET /products, /, and /status/*"
  endpointSelector:
    matchLabels:
      app: http-client
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: http-server
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/products"
              - method: "POST"
                path: "/products"
              - method: "GET"
                path: "/"
              - method: "GET"
                path: "/status/[0-9]+"
